@@ -4,7 +4,6 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
-		<meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.2.16-22 i586) [Netscape]">
 		<title>Generic NMEA GPS Receiver</title>
 		<link href="scripts/style.css" type="text/css" rel="stylesheet">
 	</head>
@@ -16,21 +15,23 @@
 		<p>Address: 127.127.20.<i>u</i><br>
 			Reference ID: <tt>GPS</tt><br>
 			Driver ID: <tt>GPS_NMEA</tt><br>
-			Serial Port: <tt>/dev/gps<i>u</i></tt>; 4800/9600 baud, 8-bits, no parity<br>
+			Serial Port: <tt>/dev/gps<i>u</i></tt>; 4800 - 115200 bps, 8-bits, no parity<br>
 			Serial Port: <tt>/dev/gpspps<i>u</i></tt>; for just the PPS signal (this is tried first for PPS, before <tt>/dev/gps<i>u</i></tt>)<br>
 			Serial Port: <tt>/dev/gps<i>u</i></tt>; symlink to server:port (for nmead) Features: <tt>tty_clk</tt></p>
 		<h4>Description</h4>
-		<p>This driver supports GPS receivers with the <tt>$GPRMC</tt> NMEA output string by default.&nbsp; Alternately the <tt>$GPGGA</tt> or <tt>$GPGLL </tt>may be selected. The driver also supports Accord's custom NMEA sentence <tt>$GPZDG</tt>, which gives GPS time unlike rest of the sentences which give UTC.</p>
-		<p>The driver expects the receiver to be set up to transmit a <tt>$GPRMC</tt> message every second.</p>
-		<p>The accuracy depend on the receiver used. Inexpesive GPS models are available with a claimed PPS signal accuracy of 1 <font face="Symbol">m</font>s or better relative to the broadcast signal. However, in most cases the actual accuracy is limited by the precision of the timecode and the latencies of the serial interface and operating system.</p>
+		<p>This driver supports GPS receivers with the <tt>$GPRMC, $GPGLL, $GPGGA, $GPZDA, and $GPZDG</tt> NMEA sentences by default.&nbsp; Note that Accord's custom NMEA sentence <tt>$GPZDG</tt> reports using the GPS timescale, while the rest of the sentences report UTC.&nbsp; The difference between the two is a whole number of seconds which increases with each leap second insertion in UTC.&nbsp; To avoid problems mixing UTC and GPS timescales, the driver disables processing of UTC sentences once <tt>$GPZDG</tt> is received.</p>
+		<p>The driver expects the receiver to be set up to transmit at least one supported sentence every second.</p>
+		<p>The accuracy depends on the receiver used. Inexpensive GPS models are available with a claimed PPS signal accuracy of 1 <font face="Symbol">m</font>s or better relative to the broadcast signal. However, in most cases the actual accuracy is limited by the precision of the timecode and the latencies of the serial interface and operating system.</p>
 		<p>If the Operating System supports the PPSAPI, RFC-2783, it will be used.<br>&nbsp;</p>
 		<p>The various GPS sentences that this driver recognises look like this:<br>
 			(others quietly ignored)</p>
-		<pre><tt>$GPRMC,POS_UTC,POS_STAT,LAT,LAT_REF,LON,LON_REF,SPD,HDG,DATE,MAG_VAR,MAG_REF*CC&lt;cr&gt;&lt;lf&gt;
-$GPGLL,LAT,LAT_REF,LONG,LONG_REF,POS_UTC,POS_STAT*CC&lt;cr&gt;&lt;lf&gt;
-$GPGGA,POS_UTC,LAT,LAT_REF,LONG,LONG_REF,FIX_MODE,SAT_USED,HDOP,ALT,ALT_UNIT,GEO,G_UNIT,D_AGE,D_REF*CC&lt;cr&gt;&lt;lf&gt;
+		<pre><tt>$GPRMC,UTC,POS_STAT,LAT,LAT_REF,LON,LON_REF,SPD,HDG,DATE,MAG_VAR,MAG_REF*CS&lt;cr&gt;&lt;lf&gt;
+$GPGLL,LAT,LAT_REF,LONG,LONG_REF,UTC,POS_STAT*CS&lt;cr&gt;&lt;lf&gt;
+$GPGGA,UTC,LAT,LAT_REF,LONG,LONG_REF,FIX_MODE,SAT_USED,HDOP,ALT,ALT_UNIT,GEO,G_UNIT,D_AGE,D_REF*CS&lt;cr&gt;&lt;lf&gt;
+$GPZDA,UTC,DD,MM,YYYY,TH,TM,*CS&lt;cr&gt;&lt;lf&gt;
+$GPZDG,GPSTIME,DD,MM,YYYY,AA.BB,V*CS&lt;cr&gt;&lt;lf&gt;
 
-&nbsp; POS_UTC&nbsp; - UTC of position. Hours, minutes and seconds [fraction (opt.)]. (hhmmss[.fff])
+&nbsp; UTC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Time of day on UTC timescale. Hours, minutes and seconds [fraction (opt.)]. (hhmmss[.fff])
 &nbsp; POS_STAT - Position status. (A = Data valid, V = Data invalid)
 &nbsp; LAT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Latitude (llll.ll)
 &nbsp; LAT_REF&nbsp; - Latitude direction. (N = North, S = South)
@@ -50,12 +51,7 @@ $GPGGA,POS_UTC,LAT,LAT_REF,LONG,LONG_REF,FIX_MODE,SAT_USED,HDOP,ALT,ALT_UNIT,GEO
 &nbsp; G_UNIT&nbsp;&nbsp; - Geoid units (M/F)
 &nbsp; D_AGE&nbsp;&nbsp;&nbsp; - Age of last DGPS Fix
 &nbsp; D_REF&nbsp;&nbsp;&nbsp; - Reference ID of DGPS station
-&nbsp; CC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Checksum (optional)
-&nbsp; &lt;cr&gt;&lt;lf&gt; - Sentence terminator.</tt></pre>
-Accord's <tt>$GPZDG</tt> has the folowing format:
-<pre><tt>$GPZDG,POS_GPS,DD,MM,YYYY,AA.BB,V*CS&lt;cr&gt;&lt;lf&gt;
-
-&nbsp; POS_GPS&nbsp; - GPS of position. Hours, minutes and seconds [fraction (opt.)]. (hhmmss[.f])
+&nbsp; GPSTIME&nbsp; - Time of day on GPS timescale. Hours, minutes and seconds [fraction (opt.)]. (hhmmss[.f])
 &nbsp; DD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Day of the month (1-31)
 &nbsp; MM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Month of the year (1-12)
 &nbsp; YYYY&nbsp;&nbsp;&nbsp;&nbsp; - Year
@@ -67,10 +63,11 @@ Accord's <tt>$GPZDG</tt> has the folowing format:
 &nbsp; CS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Checksum
 &nbsp; &lt;cr&gt;&lt;lf&gt; - Sentence terminator.</tt></pre>
 
-<p>Alternate GPS sentences (other than <tt>$GPRMC</tt> - the default) and baudrates may be enabled by setting the relevent bits of 'mode' in the server configuration line<br>&nbsp;* server 127.127.20.x mode X<br>&nbsp;&nbsp;&nbsp; bit 0 - enables RMC&nbsp;&nbsp;&nbsp; (value = 1)<br>&nbsp;&nbsp;&nbsp; bit 1 - enables GGA&nbsp;&nbsp;&nbsp; (value = 2)<br>&nbsp;&nbsp;&nbsp; bit 2 - enables GLL&nbsp;&nbsp;&nbsp;&nbsp; (value = 4)<br>&nbsp;&nbsp;&nbsp; bit 3 - enables ZDG&nbsp;&nbsp;&nbsp; (value = 8)<br> 
-<p>		Multiple sentences may be selected except when ZDG is enabled. The driver falls back to standard NMEA sentences when incorrent selection is configured.The driver uses 4800 baudrate by default. Altenatively, 9600 baudrate can be selected by using the fourth bit of 'mode' field;<br><br>
-		&nbsp;&nbsp;&nbsp; bit 4 - selects baudrate&nbsp;&nbsp; ( 0 for 4800 - the default, 1 for 9600 )<br></p>
-		<p>The driver will send a <tt>$PMOTG,RMC,0000*1D&lt;cr&gt;&lt;lf&gt;</tt> message each time a <tt>$GPRMC</tt> string is needed. This is not needed on most GPS receivers because they automatically send the <tt>$GPRMC</tt> string every second and will only work on GPS receivers that understand the <tt>$PMOTG</tt> string. Others will just ignore it.</p>
+<p>Specific GPS sentences and bitrates may be selected by setting bits of the 'mode' in the server configuration line:<br>
+  &nbsp;&nbsp;<tt>server 127.127.20.x mode X</tt><br>&nbsp;&nbsp;&nbsp; bit 0 - process <tt>$GPMRC</tt>&nbsp;&nbsp;&nbsp; (value = 1)<br>&nbsp;&nbsp;&nbsp; bit 1 - process <tt>$GPGGA</tt>&nbsp;&nbsp;&nbsp; (value = 2)<br>&nbsp;&nbsp;&nbsp; bit 2 - process <tt>$GPGLL</tt>&nbsp;&nbsp;&nbsp;&nbsp; (value = 4)<br>&nbsp;&nbsp;&nbsp; bit 4 - process <tt>$GPZDA</tt> or <tt>$GPZDG</tt>&nbsp;&nbsp;&nbsp; (value = 8)<br> 
+<p>The default (mode 0) is to process all supported sentences, which results in the last received each cycle being used.&nbsp; Multiple sentences may be selected by adding their mode bit values.&nbsp; The driver uses 4800 bits per second by default.&nbsp; Faster bitrates can be selected using bits 4, 5, and 6 of the mode field:<br><br>
+		&nbsp;&nbsp;&nbsp; bits 4/5/6 - select serial bitrate&nbsp;&nbsp; ( 0 for 4800 - the default, 1 for 9600, 2 for 19200, 3 for 38400, 4 for 57600, 5 for 115200 )<br></p>
+		<p>The driver will send a <tt>$PMOTG,RMC,0000*1D&lt;cr&gt;&lt;lf&gt;</tt> command each poll interval.&nbsp; This is not needed on most GPS receivers because they automatically send <tt>$GPRMC</tt> every second, but helps a Motorola GPS receiver that is otherwise silent.&nbsp; NMEA devices ignore commands they do not understand.</p>
 		<h4>Setting up the Garmin GPS-25XL</h4>
 		Switch off all output with by sending it the following string.
 		<pre>&quot;$PGRMO,,2&lt;cr&gt;&lt;lf&gt;&quot;</pre>
@@ -79,7 +76,7 @@ Accord's <tt>$GPZDG</tt> has the folowing format:
 		<p>On some systems the PPS signal isn't switched on by default. It can be switched on by sending the following string.</p>
 		<pre>&quot;$PGRMC,,,,,,,,,,,,2&lt;cr&gt;&lt;lf&gt;&quot;</pre>
 		<h4>Monitor Data</h4>
-		<p>The GPS sentence(s) that is used is written to the clockstats file.</p>
+		<p>The GPS sentence that is used is written to the clockstats file and available with ntpq -c clockvar.</p>
 		<h4>Fudge Factors</h4>
 		<dl>
 			<dt><tt>time1 <i>time</i></tt>
@@ -97,7 +94,7 @@ Accord's <tt>$GPZDG</tt> has the folowing format:
 			<dt><tt>flag3 0 | 1</tt>
 			<dd>Controls the kernel PPS discipline: 0 for disable (default), 1 for enable.
 			<dt><tt>flag4 0 | 1</tt>
-			<dd>Not used by this driver.
+			<dd>Obscures location in timecode: 0 for disable (default), 1 for enable.
 		</dl>
 		<p>Additional Information</p>
 		<p><a href="../refclock.html">Reference Clock Drivers</a></p>
